# hifi-gan

./: .gitignore  .pre-commit-config.yaml  README.md  config_v2.json  config_v3.json  inference.py  inference_e2e.py  meldataset.py  models.py  pyproject.toml  requirements.txt  train.py  utils.py
BahnaricSpeech/: split.py  validation.txt
cp_hifigan/: config.json
