[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["tqtensor <victortang212@gmail.com>"]
description = "Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis"
name = "hifi-gan"
packages = [{include = "hifi_gan"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
librosa = "^0.10.0.post2"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
python = ">=3.9,<=3.11"
scipy = "^1.11.1"
soundfile = "^0.12.1"
tensorboard = "^2.13.0"
torch = "<2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
toml-sort = "^0.23.1"
